--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -150,9 +150,11 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              {{contact_form.first_name.label}}
-              {{contact_form.first_name(class="form-control", id="first_name", placeholder="First name")}}
-          </div>
+              <div class="label-name">
+                {{contact_form.first_name.label}}
+              {{contact_form.first_name(class="form-control form-control-lg", id="first_name", placeholder="First name")}}
+              </div>              
+             </div>
           <div class="col-md-6 col-12 mb-2">
             <div id="last-name" class="alert alert-warning collapse" role="alert">
             <strong>Incorrect Entry!</strong>
@@ -160,8 +162,10 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <span class="ion-android-person-add"></span> {{contact_form.last_name.label}}
-          {{contact_form.last_name(class="form-control", id="last_name", placeholder="Last name")}}
+          <div class="label-name">
+            {{contact_form.last_name.label}}
+          {{contact_form.last_name(class="form-control form-control-lg", id="last_name", placeholder="Last name")}}
+          </div>          
           </div>
           <div class="col-md-6 col-12 mb-2">
             <div id="email" class="alert alert-warning collapse" role="alert">
@@ -170,8 +174,10 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <span class="ion-email"></span>{{contact_form.email.label}}
-            {{contact_form.email(class="form-control", id="email", placeholder="Email address")}}
+            <div class="label-email">
+              {{contact_form.email.label}}
+              {{contact_form.email(class="form-control form-control-lg", id="email", placeholder="Email address")}}
+            </div>            
           </div>
           <div class="col-md-6 col-12 mb-2">
             <div id="phone-number" class="alert alert-warning collapse" role="alert">
@@ -180,8 +186,10 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <span class="ion-android-call"></span>{{contact_form.phone_number.label}}
-            {{contact_form.phone_number(class="form-control", id="email", placeholder="Phone number")}}
+            <div class="label-phone">
+               {{contact_form.phone_number.label}}
+              {{contact_form.phone_number(class="form-control form-control-lg", id="phone_number", placeholder="Phone number")}}                
+            </div>           
           </div>
         </div>
         <div class="row">
@@ -192,8 +200,10 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <span class="ion-ios-compose"></span>{{contact_form.message.label}}
-            {{contact_form.message(class="form-control", id="message", placeholder="Message", rows="10", cols="50")}}
+            <div class="label-message">
+               {{contact_form.message.label}}
+            {{contact_form.message(class="form-control form-control-lg", id="message", placeholder="Message", rows="10", cols="50")}}
+            </div>           
           </div>
         </div>
         <div class="row">
@@ -203,16 +213,25 @@
         </div>
         <div class="row">
           <div class="col-12 mt-2">
-            <button type="submit" class="btn btn-primary btn-lg">Send message <span class="ion-paper-airplane"></span></button>
+            <button type="submit" class="btn btn-primary btn-lg submit-message">Send message </button>
           </div>
         </div>
 
       </form>
       </div>
 
-      <div class="col-md-4 text-justify"><!--start of second grid-->
-        <p>Do you want to get in touch with me? Fill out the form below and send me a message about what you are interested in doing. I will get back to you within the next 24hrs.</p>
-        <p>If you don't hear back from me within 24hrs, please contact give me a call. The automatic reply message. will have my phone number listed.</p>
+      <div class="col-md-4 text-justify lead mt-3"><!--start of second grid-->
+        <p>Do you want to get in touch with me? Fill out the form below and send me a message. I will get back to you within the next 24hrs.</p>
+        <p class="mb-5">I am looking forward to hearing from you soon. Thank you!!!</p>
+        <div class="social ">
+          <h2 class="text-uppercase text-center">Around the Web</h2>
+          <ul class="list-inline text-center">
+               <a href="https://github.com/momojohnson?tab=repositories" target="_blank"><li class="list-inline-item pr-2"><i class="fab fa-github"></i></li></a>
+               <a href="https://twitter.com/momo12g13" target="_blank"><li class="list-inline-item pr-3"><i class="fab fa-twitter"></i></li></a>
+               <a href="https://www.linkedin.com/in/momo-johnson-17b803131/" target="_blank"><li class="list-inline-item pr-3"><i class="fab fa-linkedin-in"></i></li></a>
+               <a href="https://www.freecodecamp.org/fcc2b91b402" target="_blank"><li class="list-inline-item pr-3"><i class="fab fa-free-code-camp"></i></li></a>
+             </ul>
+        </div>
       </div>
     </div>
   </div>
