--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -236,4 +236,40 @@
     </div>
   </div>
 </section>
+
+<section id="footer" class="footer text-center text-white">
+  <div class="container">
+    <div class="row">
+      
+    
+    <div class="col-md-4 mb-md-5 mb-lg-0 pt-5">
+      <h3 class="text-uppercase mb-4">Location</h3>
+      <p class="lead">Greater Twins Cities Area <br>
+      Minneapolis, Minnesota</p>
+    </div>
+    <div class="col-md-4 mb-4 mb-lg-0 mt-5">
+          <h3 class="text-uppercase">Around the Web</h3>
+          <ul class="list-inline text-white mt-4">
+               <a  class="btn btn-outline-light rounded-circle text-center btn-social" href="https://github.com/momojohnson?tab=repositories" target="_blank"><li class="list-inline-item pr-3"><i class="fab fa-github"></i></li></a>
+               <a class="btn btn-outline-light  rounded-circle text-center btn-social" href="https://twitter.com/momo12g13" target="_blank"><li class="list-inline-item pr-3"><i class="fab fa-twitter"></i></li></a>
+               <a class="btn btn-outline-light  rounded-circle text-center btn-social" href="https://www.linkedin.com/in/momo-johnson-17b803131/" target="_blank"><li class="list-inline-item pr-3"><i class="fab fa-linkedin-in"></i></li></a>
+               <a class="btn btn-outline-light  rounded-circle text-center btn-social" href="https://www.freecodecamp.org/fcc2b91b402" target="_blank"><li class="list-inline-item pr-3"><i class="fab fa-free-code-camp"></i></li></a>
+            </ul>       
+    </div>
+    <div class="col-md-4 mb-0 mb-lg-0 mt-5">
+      <h3>About Momo Johnson</h3>
+      <p class="lead mt-4">I'm passionate about building great applications with code quality in mind.</p>
+      
+    </div>
+    </div>
+  </div> 
+  <div class="copyright text-white text-center">
+  <div class="container">
+    <div row>
+      <small class="lead"> Copyright &copy Momo Johnson 2018. All right reserve.</small>
+    </div>    
+  </div>
+</div> 
+</section>
+
 {% endblock %}
