Added media query to website for smaller devices, medium and desktop

--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block header %}
-<header clas="page-header">
+<header class="page-header" id="page-header">
   <div class="container  pt-5">
     <img class="img-fluid rounded-circle d-block mx-auto" src="{{url_for('static', filename='img/profile_pic1.jpg')}}" alt="">
       <div class="typed_wrap text-center mt-5">
