--- a/app/static/css/portfolio.css
+++ b/app/static/css/portfolio.css
@@ -180,3 +180,66 @@ hr.style-eight:after {
     font-weight: bold;
     background: white;
 }
+
+/* Media query for small devices*/
+@media (max-width: 576px) {
+  header{
+  height: 80vh;
+}
+.hire-link a{
+  font-weight: 300;
+}
+.typed_wrap h1, .typed_wrap span{
+  font-size: 20px !important;
+}
+#page-header img{
+  max-height: 200px !important;
+  max-width: 200px !important;
+}
+
+.section-heading{
+  font-size:  2rem;
+  font-family: 'Days One', sans-serif;
+}
+.section-subheading{
+ 
+  font-size: 1.5em;
+}
+.degree{  
+  font-size: 15px;
+
+}
+.college {
+    font-family: 'Days One', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+}
+span.degree{
+  font-size: 12px;
+}
+
+}
+
+/*Media query devices above smaller devices*/
+@media (min-width: 577px) { 
+.typed_wrap h1, .typed_wrap span{
+  font-size: 28px !important;
+  }
+  #page-header img{
+  max-height: 250px !important;
+  max-width: 250px !important;
+}
+ }
+/*Media query for desktop applications*/
+ @media (min-width: 992px) {
+  .typed_wrap h1, .typed_wrap span{
+  font-size: 40px !important;
+  }
+  #page-header img{
+  max-height: 300px !important;
+  max-width: 300px !important;
+}
+ }
+
+
+
