--- a/app/static/css/portfolio.css
+++ b/app/static/css/portfolio.css
@@ -1,3 +1,40 @@
+/* Styling navbar*/
+
+body { 
+    padding-top: 65px; 
+}
+.navbar{
+  background-color: #2e2e3a;
+  padding: 15px 30px 15px 20px;
+}
+
+.navbar-nav li.nav-item a{
+  font-size: 22px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 550;
+  border-radius: 5px;
+  margin-right: 5px;
+  transition: 500ms background ease-in-out, 500ms font-size ease, 
+  500ms border ease-out, 200ms color ease-in-out,
+   200ms text-align ease-in-out, 500ms padding ease-in-out;
+}
+
+.navbar-nav li.nav-item a:hover{
+  background-color: #bbb8b2;
+  font-size: 25px;
+  border-radius: 5px;
+  text-align: center;
+  padding: 5px 8px 5px 8px;
+  color: #bc5d2e !important;
+}
+
+.navbar .navbar-toggler {
+    border-color: rgb(255,102,203);
+}
+
+.fa.fa-navicon {
+  color:white;
+}
 /* Styling of header sections starts here */
 
 
@@ -20,7 +57,7 @@ header{
 .hire-link a:hover{
  background-color: #bc5d2e;
  border-radius: 20px;
- width: 350px;
+ width: 250px;
  font-size: 20px;
  border: 3px solid #bc5d2e;
  color: black !important;
@@ -183,6 +220,7 @@ hr.style-eight:after {
 
 /* Media query for small devices*/
 @media (max-width: 576px) {
+
 .hire-link a{
   font-weight: 300;
 }
@@ -214,6 +252,14 @@ hr.style-eight:after {
 span.degree{
   font-size: 12px;
 }
+small.lead{
+  font-size: 12px !important;
+}
+
+.navbar-nav li.nav-item a{
+  margin-top: 10px;
+}
+
 
 }
 
@@ -226,7 +272,16 @@ span.degree{
   max-height: 250px !important;
   max-width: 250px !important;
 }
+small.lead{
+  font-size: 15px;
  }
+
+ footer h3{
+  font-size: 1rem;
+ }
+
+
+}
 /*Media query for desktop applications*/
  @media (min-width: 992px) {
   .typed_wrap h1, .typed_wrap span{
@@ -236,6 +291,13 @@ span.degree{
   max-height: 300px !important;
   max-width: 300px !important;
 }
+.btn-social {
+    width: 3.25rem;
+    height: 3.25rem;
+    font-size: 1.25rem;
+    line-height: 2rem;
+}
+
  }
 
 
